[package]
name = "hello-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
biquad = "0.4.2"
cortex-m-rt = "0.7"
libm = "0.2.7"
microbit-v2 = { path = "/local/src/old/microbit/microbit-v2" }
rtt-target = "0.4"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[features]
external_out = []
