[package]
name = "hello-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
biquad = "0.5.0"
cortex-m-rt = "0.7"
libm = "0.2.15"
microbit-v2 = "0.15.1"
rtt-target = "0.6"
panic-rtt-target = "0.2"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[features]
external_out = []
